# DB-2025-Porject

./: .gitignore  DB-Project_Part 1.docx  README.md  app.py  config.py  pyproject.toml  routes.py
api/: auth.py  boards.py  pins.py  social.py
backend/: app.py  auth.py  boards.py  config.py  db.py  pins.py  requirements.txt  social.py  utils.py
frontend/: App.js
frontend-test/: api.js  package.json
frontend-test/src/components/: BoardCard.jsx  LoginForm.jsx  SignupForm.jsx
frontend-test/src/pages/: BoardPinsPage.jsx  SearchResultsPage.jsx
frontend/src/: App.js
frontend/src/components/: LoginForm.jsx  PinCard.jsx  SearchBar.jsx  SignupForm.jsx
frontend/src/pages/: BoardsPage.jsx  FeedPage.jsx
static/css/: style.css
static/js/: main.js
templates/: base.html  error.html  feed.html  friendlist.html  index.html  search.html
templates/auth/: login.html  register.html
templates/board/: create.html  view.html
templates/pin/: create.html  view.html
templates/profile/: view.html
