[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pinterest-clone"
version = "0.1.0"
description = "A Flask-based Pinterest clone application"
requires-python = ">=3.8"
dependencies = [
    "Flask>=2.2.0,<3.0.0",
    "Flask-Cors>=3.0.10,<4.0.0",
    "psycopg2-binary>=2.9.5,<3.0.0",
    "Werkzeug>=2.2.0,<3.0.0",
    "click>=8.1.3,<9.0.0",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.10.0",
    "flake8>=6.0.0",
]

[tool.setuptools]
# Explicitly specify packages instead of using "find"
packages = ["api"]

# Define static and templates as package data
[tool.setuptools.package-data]
"*" = ["static/**/*", "templates/**/*"]